--- a/Basic/public/index.html
+++ b/Basic/public/index.html
@@ -10,11 +10,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Yapify</title>
+    <title>Yapify 💬</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="title">Yapify 💬</h1>
+    <h1 class="title"></h1>
     <div class="main">
       <div class="name">
         <span><i class="far fa-user"></i></span>
@@ -45,13 +45,12 @@
       </ul>
       <form class="message-form" id="message-form">
         <input type="text" class="message-input" id="message-input" />
-        <div class="v-divider"></div>
         <button type="submit" class="send-button">
           send <span><i class="fas fa-paper-plane"></i></span>
         </button>
       </form>
+      <h3 class="clients-total" id="client-total">Total clients: 2</h3>
     </div>
-    <h3 class="clients-total" id="client-total">Total clients:2</h3>
     <script src="/socket.io/socket.io.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment-with-locales.min.js"
